updated flask app

--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -79,11 +79,21 @@ OnlineShoppersIntention
                             
                             <textarea class="form-control" name="Region" rows="1" 
                                 placeholder="Enter Region"></textarea>
-                            <textarea class="form-control" name="TrafficType" rows="1" 
-                                placeholder="Enter traffic type"></textarea>
 
-                            
-                            <label for="VisitorType">Select Visitor Type:</label>
+                            <textarea class="form-control" name="TrafficType" rows="1" 
+                                placeholder="Enter Traffic Type"></textarea>
+
+
+                            <textarea class="form-control" name="VisitorType" rows="1" 
+                                placeholder="Enter VisitorType"></textarea>
+
+                            <textarea class="form-control" name="Weekend" rows="1" 
+                                placeholder="Enter Weekend"></textarea>
+
+                            <textarea class="form-control" name="Month" rows="1" 
+                                placeholder="Enter Month"></textarea>
+
+                            <!-- <label for="VisitorType">Select Visitor Type:</label>
                             <select id="VisitorType" name="VisitorType", placeholder="Visitor type", required="required">
                                 <option value="0">New Vistor</option>
                                 <option value="1">Other</option>
@@ -91,13 +101,13 @@ OnlineShoppersIntention
                             </select>
                             <br>
                             <label for="Weekend">Is the day Weekend?:  </label>
-                            <select id="Month" name="Month", placeholder="Region", required="required">
+                            <select id="Weekend" name="Weekend", placeholder="Weekend", required="required">
                                   <option value="0">Yes</option>
                                   <option value="1">No</option>
                             </select>
                             <br>    
                             <label for="Month">Select Month:  </label>
-                            <select id="Month" name="Month", placeholder="Region", required="required">
+                            <select id="Month" name="Month", placeholder="Month", required="required">
                               <option value="0">January</option>
                               <option value="1">February</option>
                               <option value="2">March</option>
@@ -110,7 +120,7 @@ OnlineShoppersIntention
                               <option value="9">Octuber</option>
                               <option value="10">November</option>
                               <option value="11">December</option>
-                            </select>
+                            </select> -->
                             
                         </div>
 
