finally app is working

--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -83,17 +83,8 @@ OnlineShoppersIntention
                             <textarea class="form-control" name="TrafficType" rows="1" 
                                 placeholder="Enter Traffic Type"></textarea>
 
-
-                            <textarea class="form-control" name="VisitorType" rows="1" 
-                                placeholder="Enter VisitorType"></textarea>
-
-                            <textarea class="form-control" name="Weekend" rows="1" 
-                                placeholder="Enter Weekend"></textarea>
-
-                            <textarea class="form-control" name="Month" rows="1" 
-                                placeholder="Enter Month"></textarea>
-
-                            <!-- <label for="VisitorType">Select Visitor Type:</label>
+                                
+                            <label for="VisitorType">Select Visitor Type:</label>
                             <select id="VisitorType" name="VisitorType", placeholder="Visitor type", required="required">
                                 <option value="0">New Vistor</option>
                                 <option value="1">Other</option>
@@ -120,7 +111,7 @@ OnlineShoppersIntention
                               <option value="9">Octuber</option>
                               <option value="10">November</option>
                               <option value="11">December</option>
-                            </select> -->
+                            </select>
                             
                         </div>
 
